Fix display on mobile

--- a/src/style.styl
+++ b/src/style.styl
@@ -166,8 +166,10 @@ html, body
 	.header
 		padding 0
 		min-height 75vh
+		&:after
+			height 150px
 	.headline
-		font-size 3.5em
+		font-size 3em
 		text-align center
 	.presets
 		grid-template 1fr / 1fr
